Fix invisible IDs in some reference sections

--- a/sphinx_astrorefs/_static/sphinx_astrorefs.css
+++ b/sphinx_astrorefs/_static/sphinx_astrorefs.css
@@ -15,7 +15,6 @@
     margin: 0 !important;
     border-top: solid 0px !important;
     padding: 0 !important;
-    visibility: hidden !important;
     display: none;
 }
 /* These try to make the citation list look a bit nicer, not too indented */
